added cosmetic changes in title

--- a/src/main/templates/contact_us.html
+++ b/src/main/templates/contact_us.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}MedVoyage | Contact Us{% endblock %}
+{% block title %}Contact Us{% endblock %}
 
 {% block content %}
 <!-- Contact Us Section -->
