--- a/src/main/templates/login.html
+++ b/src/main/templates/login.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}MedVoyage | Login{% endblock %}
+{% block title %}Login{% endblock %}
 
 {% block content %}
     <div class="container">
@@ -22,7 +22,7 @@
                             </div>
 
                             <button type="submit" class="btn btn-primary btn-block text-center mt-2">Login</button>
-                            
+
                             <div class="text-center">
                                 <a href="{% url 'signup' %}">Don't have an account? Sign Up Here</a>
                             </div>
