--- a/src/main/templates/patient_appointments.html
+++ b/src/main/templates/patient_appointments.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}MedVoyage | Patient Appointments{% endblock %}
+{% block title %}Patient Appointments{% endblock %}
 
 
 {% block content %}
