--- a/src/main/templates/verification.html
+++ b/src/main/templates/verification.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}MedVoyage | 2FA Verification{% endblock %}
+{% block title %}2FA Verification{% endblock %}
 
 {% block content %}
     <div class="container">
