--- a/src/main/templates/about_us.html
+++ b/src/main/templates/about_us.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}MedVoyage | About Us{% endblock %}
+{% block title %}About Us{% endblock %}
 
 {% block content %}
 <!-- About Us Intro -->
