--- a/src/main/templates/base.html
+++ b/src/main/templates/base.html
@@ -12,7 +12,7 @@
     {% load static %}
     <link href={% static "css/main.css" %} rel="stylesheet"/>
 
-    <title>{% block title %}MedVoyage Home{% endblock %}</title>
+    <title>MedVoyage | {% block title %}Base{% endblock %}</title>
 
   </head>
 
