--- a/src/main/templates/book_appointment.html
+++ b/src/main/templates/book_appointment.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %}Book Appointment{% endblock %}
+
 {% block content %}
   <h2>Book an Appointment</h2>
   <form method="post">
