--- a/src/main/templates/clientupdateform.html
+++ b/src/main/templates/clientupdateform.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %}Client Update Form{% endblock %}
+
 {% block content %}
 <div class="container mx-auto">
     <h2 class="text-center">Update User Information</h2>
