--- a/src/main/templates/index.html
+++ b/src/main/templates/index.html
@@ -1,4 +1,6 @@
-{% extends 'base.html' %} {% block title %}MedVoyage | Home{% endblock %}
+{% extends 'base.html' %}
+
+{% block title %}Home{% endblock %}
 
 {% block content %}
 <div class="d-flex justify-content-center align-items-center" style="height: 80vh;">
