added simple fontend home fixes

--- a/src/main/templates/navbar.html
+++ b/src/main/templates/navbar.html
@@ -1,5 +1,5 @@
 <!-- Navigation Bar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #d9d9d9;">
     <!-- Brand Logo and Name -->
    {% if user.is_authenticated %}
         {% if user.is_doctor %}
