--- a/src/main/templates/footer.html
+++ b/src/main/templates/footer.html
@@ -1,3 +1,3 @@
-<footer class="bg-light text-center py-4" style="background-color: #D8BFD8; position: bottom; bottom: 0; width: 100%;">
+<footer class="text-center text-black d-flex justify-content-center align-items-center" style="background-color: #cccccc; position: bottom; bottom: 0; width: 100%; height: 8vh;">
     <p>&copy; MedVoyage</p>
 </footer>
