--- a/src/main/templates/about_us.html
+++ b/src/main/templates/about_us.html
@@ -22,8 +22,7 @@
       {% for developer in developers %}
       <div class="col-md-4 mb-3">
         <div class="card h-100 border-0 shadow-sm" style="background-color: #f2f2f2;">
-          {% load static %}
-          <img src="{% static developer.image|stringformat:'s' %}" class="card-img-top rounded-circle mx-auto d-block" alt="{{ developer.name }}" style="width:60%; object-fit: cover;">
+          <img src="{{ developer.image }}" class="card-img-top rounded-circle mx-auto d-block" alt="{{ developer.name }}" style="width:60%; object-fit: cover;">
           <div class="card-body text-center" style="background-color: #e6e6e6;">
             <h5 class="card-title">{{ developer.name }}</h5>
             <p class="card-text">{{ developer.bio }}</p>
