--- a/src/main/templates/contact_us.html
+++ b/src/main/templates/contact_us.html
@@ -3,45 +3,38 @@
 {% block title %}Contact Us{% endblock %}
 
 {% block content %}
-<!-- Contact Us Section -->
-<section class="bg-light py-5">
+<section class="py-3" style="background-color: #fff; min-height: 84vh;">
     <div class="container">
         <h2 class="text-center mb-4">Contact Us</h2>
 
-        <!-- Contact Form -->
         <div class="row justify-content-center">
             <div class="col-md-8">
-                <form action="{% url 'contact_us_form_submit' %}" method="post">
+                <form action="{% url 'contact_us' %}" method="post">
                     {% csrf_token %}
 
-                    <!-- Name Field -->
                     <div class="form-group">
                         <label for="name">Name:</label>
                         <input type="text" class="form-control" id="name" name="name" placeholder="Enter your name" required>
                     </div>
 
-                    <!-- Email Field -->
                     <div class="form-group">
                         <label for="email">Email:</label>
                         <input type="email" class="form-control" id="email" name="email" placeholder="Enter your email" required>
                     </div>
 
-                    <!-- Message Field -->
                     <div class="form-group">
                         <label for="message">Message:</label>
                         <textarea class="form-control" id="message" name="message" rows="4" placeholder="Your message here..." required></textarea>
                     </div>
 
-                    <!-- Submit Button -->
                     <div class="text-center">
-                        <button type="submit" class="btn btn-primary mt-3">Submit</button>
+                        <button type="submit" class="btn btn-primary mt-3 btn-mv-green">Submit</button>
                     </div>
                 </form>
             </div>
         </div>
 
-        <!-- Contact Info -->
-        <div class="row mt-5">
+        <div class="row mt-3">
             <div class="col-md-4 text-center">
                 <i class="fa fa-phone fa-2x mb-3"></i>
                 <h4>Phone</h4>
