--- a/src/main/templates/index.html
+++ b/src/main/templates/index.html
@@ -3,7 +3,7 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-<div class="d-flex justify-content-center align-items-center" style="background-color: #fff; height: 84vh;">
+<div class="d-flex justify-content-center align-items-center" style="background-color: #fff; min-height: 84vh;">
     <figure class="text-center">
         <blockquote class="blockquote">
             <h1 class="display-2 display-md-3 display-lg-4" style="color: #333;font-weight: bold;">MedVoyage</h1>
