contact us support details fixed

--- a/src/main/templates/contact_us.html
+++ b/src/main/templates/contact_us.html
@@ -38,17 +38,17 @@
             <div class="col-md-4 text-center">
                 <i class="fa fa-phone fa-2x mb-3"></i>
                 <h4>Phone</h4>
-                <p>+123 456 7890</p>
+                <p>(+1) 214-89-22196</p>
             </div>
             <div class="col-md-4 text-center">
                 <i class="fa fa-envelope fa-2x mb-3"></i>
                 <h4>Email</h4>
-                <p>contact@medvoyage.com</p>
+                <p>medvoyage.service@gmail.com</p>
             </div>
             <div class="col-md-4 text-center">
                 <i class="fa fa-map-marker fa-2x mb-3"></i>
                 <h4>Location</h4>
-                <p>123 Street, Denton, United States</p>
+                <p> Discovery Park, N Elm Street, Denton, TX, US.</p>
             </div>
         </div>
 
