added login frontend fixes with unit test fixes

--- a/src/main/templates/login.html
+++ b/src/main/templates/login.html
@@ -3,8 +3,8 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-    <div class="container">
-        <div class="row justify-content-center align-items-center" style="height: 100vh;">
+    <div class="container bg-light" style="background-color: #fff;">
+        <div class="row justify-content-center align-items-center" style="height: 84vh;">
             <div class="col-md-6">
                 <div class="card">
                     <div class="card-body">
@@ -21,13 +21,13 @@
                                 <input type="password" class="form-control form-control-lg" id="id_password" name="password" placeholder="Enter your password">
                             </div>
 
-                            <button type="submit" class="btn btn-primary btn-block text-center mt-2">Login</button>
+                            <button type="submit" class="btn btn-primary btn-block text-center mt-2 btn-mv-green">Login</button>
 
                             <div class="text-center">
-                                <a href="{% url 'signup' %}">Don't have an account? Sign Up Here</a>
+                                <a class="text-mv-green" href="{% url 'signup' %}">Don't have an account? Sign Up Here</a>
                             </div>
                             <div class="text-center">
-                                <a href="{% url 'reset_password' %}">Forgot Password? Reset Here</a>
+                                <a class="text-mv-green" href="{% url 'reset_password' %}">Forgot Password? Reset Here</a>
                             </div>
                         </form>
                     </div>
