--- a/src/main/templates/login.html
+++ b/src/main/templates/login.html
@@ -3,8 +3,9 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-    <div class="container bg-light" style="background-color: #fff;">
-        <div class="row justify-content-center align-items-center" style="height: 84vh;">
+<div style="background-color: #fff;">
+    <div class="container">
+        <div class="row justify-content-center align-items-center" style="min-height: 84vh;">
             <div class="col-md-6">
                 <div class="card">
                     <div class="card-body">
@@ -35,4 +36,5 @@
             </div>
         </div>
     </div>
+</div>
 {% endblock %}
