added frontend fixes for reset password page

--- a/src/main/templates/reset_password.html
+++ b/src/main/templates/reset_password.html
@@ -3,8 +3,9 @@
 {% block title %}MedVoyage | Login{% endblock %}
 
 {% block content %}
+<div style="background-color: #fff;">
     <div class="container">
-        <div class="row justify-content-center align-items-center" style="height: 100vh;">
+        <div class="row justify-content-center align-items-center" style="height: 84vh;">
             <div class="col-md-6">
                 <div class="card">
                     <div class="card-body">
@@ -24,10 +25,10 @@
                             <label for="id_security_question"> Security Question</label>
                             <input type ="text" class="form-control form-control-lg" id="id_security_question" name="security_question" placeholder="Enter your security question answer">
                            </div>
-                            <button type="submit" class="btn btn-primary btn-block text-center">Reset</button>
-                            
+                            <button type="submit" class="btn btn-primary btn-block text-center btn-mv-green">Reset</button>
+
                             <div class="text-center">
-                                <a href="{% url 'signup' %}">Don't have an account? Sign Up Here</a>
+                                <a class="text-mv-green" href="{% url 'signup' %}">Don't have an account? Sign Up Here</a>
                             </div>
                         </form>
                     </div>
@@ -35,4 +36,5 @@
             </div>
         </div>
     </div>
+</div>
 {% endblock %}
