--- a/src/main/templates/base.html
+++ b/src/main/templates/base.html
@@ -12,6 +12,11 @@
     {% load static %}
     <link href={% static "css/main.css" %} rel="stylesheet"/>
 
+    <link rel="apple-touch-icon" sizes="180x180" href={% static "favicon/apple-touch-icon.png" %}>
+    <link rel="icon" type="image/png" sizes="32x32" href={% static "favicon/favicon-32x32.png" %}>
+    <link rel="icon" type="image/png" sizes="16x16" href={% static "favicon/favicon-16x16.png" %}>
+    <link rel="manifest" href={% static "favicon/site.webmanifest" %}>
+
     <title>MedVoyage | {% block title %}Base{% endblock %}</title>
 
   </head>
