added signup title missing issue

--- a/src/main/templates/signup.html
+++ b/src/main/templates/signup.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %}Sign-Up{% endblock %}
+
 {% block content %}
 <div style="background-color: #fff; min-height: 84vh;">
 <div class="container mx-auto">
