--- a/src/main/templates/clientdashboard.html
+++ b/src/main/templates/clientdashboard.html
@@ -3,11 +3,14 @@
 {% block title %}Client Dashboard{% endblock %}
 
 {% block content %}
-<div class="d-flex justify-content-center align-items-center" style="height: 81vh;">
+<div class="d-flex justify-content-center align-items-center" style="height: 84vh;">
     <figure class="text-center">
         <blockquote class="blockquote">
             <h1 class="display-2 display-md-3 display-lg-4" style="color: #333;font-weight: bold;">Welcome to your Dashboard</h1>
         </blockquote>
+        <div class="btn btn-primary btn-mv-green">
+            <a href="{% url 'book_appointment' %}" style="color: #000;">Book an Appointment</a>
+        </div>
     </figure>
 </div>
 {% endblock %}
