--- a/src/main/templates/cancel_appointment.html
+++ b/src/main/templates/cancel_appointment.html
@@ -34,8 +34,8 @@
                 {% for appointment in appointments %}
                     <tr>
                         <td>{{ appointment.appointment_id }}</td>
-                        <td>{{ appointment.date }}</td>
-                        <td>{{ appointment.time }}</td>
+                        <td>{{ appointment.appointment_date }}</td>
+                        <td>{{ appointment.start_time }}</td>
                     </tr>
                 {% endfor %}
             </tbody>
