Patient Appointments fixes

--- a/src/main/templates/clientdashboard.html
+++ b/src/main/templates/clientdashboard.html
@@ -11,6 +11,9 @@
         <div class="btn btn-primary btn-mv-green">
             <a href="{% url 'book_appointment' %}" style="color: #000;">Book an Appointment</a>
         </div>
+        <div class="btn btn-primary btn-mv-green">
+            <a href="{% url 'patient_appointments' %}" style="color: #000;">Patient Appointments</a>
+        </div>
     </figure>
 </div>
 {% endblock %}
