--- a/src/main/templates/patient_appointments.html
+++ b/src/main/templates/patient_appointments.html
@@ -14,7 +14,7 @@
     <ul> 
     <p> <b>Upcoming Appointments </b>
     {% for appointment in upcoming_appointments %}
-    <li>{{appointment.appointment_id}}- {{appointment.patient.user.username}} - {{appointment.date}} - {{appointment.time}} - {{appointment.doctor.user.username}} </li>
+    <li>Appointment with <b> Dr. {{appointment.doctor.user.username}}</b> is on <i>{{appointment.appointment_date}} from {{appointment.start_time}}-{{appointment.end_time}}</i> </li>
 
     {% endfor %} 
     {% if not upcoming_appointments %} 
@@ -24,7 +24,7 @@
     </p>
     <p> <b> Past Appointments</b></p>
     {% for appointment in past_appointments %}
-    <li>{{appointment.appointment_id}}- {{appointment.patient.user.username}} - {{appointment.date}} - {{appointment.time}} - {{appointment.doctor.user.username}} </li>
+    <li>Appointment with <b> Dr. {{appointment.doctor.user.username}}</b> is on <i>{{appointment.appointment_date}} from {{appointment.start_time}}-{{appointment.end_time}}</i> </li>
 
     {% endfor %}
 </ul>
