fix bug so only the logged in users appointments show on the cancel screen

--- a/src/main/templates/cancel_appointment.html
+++ b/src/main/templates/cancel_appointment.html
@@ -32,11 +32,13 @@
             </thead>
             <tbody>
                 {% for appointment in appointments %}
+                    {% if appointment.patient.user == request.user %}
                     <tr>
                         <td>{{ appointment.appointment_id }}</td>
                         <td>{{ appointment.appointment_date }}</td>
                         <td>{{ appointment.start_time }}</td>
                     </tr>
+                    {% endif %}
                 {% endfor %}
             </tbody>
         </table>
