--- a/src/main/templates/cancel_appointment.html
+++ b/src/main/templates/cancel_appointment.html
@@ -15,7 +15,14 @@
             <h2>Cancel an Appointment</h2>
             <div class="form-group">
                 <label for="id_appointment" class="m-1">Select the appointment you want to cancel</label>
-                <input type="text" class="form-control form-control-lg mb-2" id="id_appointment" name="appointment_id" placeholder="Enter appointment id here">
+                <!-- <input type="text" class="form-control form-control-lg mb-2" id="id_appointment" name="appointment_id" placeholder="Enter appointment id here"> -->
+                <select name="appointment_id">
+                {% for appointment in appointments %}
+                    {% if appointment.patient.user == request.user %}
+                    <option value="{{ appointment.appointment_id  }}">{{ appointment.appointment_date }}  {{ appointment.start_time }}</option>
+                    {% endif %}
+                {% endfor %}
+                </select>
             </div>
             <button type="submit" class="btn btn-mv-green btn-block text-center mt-2 text-white">Cancel Appointment</button>
         </form>
