--- a/src/main/templates/add_slots.html
+++ b/src/main/templates/add_slots.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %}Add Slots{% endblock %}
+
 {% block content %}
 <div class="container mt-5">
     <h2 class="mb-4">Add Available Slots</h2>
