--- a/src/main/templates/slots_list.html
+++ b/src/main/templates/slots_list.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %}Available Slots{% endblock %}
+
 {% block content %}
 
   <!-- Success message display -->
