--- a/src/main/templates/navbar.html
+++ b/src/main/templates/navbar.html
@@ -50,11 +50,7 @@
                 </li>
             {% endif %}
             {% if user.is_authenticated %} 
-                {% if user.is_patient %}
-                <li class="nav-item">
-                    <a href="{% url 'patient_appointments' %}" class="nav-link">Patient Appointments</a>
-                </li>
-                {% elif user.is_doctor %}
+                {% if user.is_doctor %}
                 <li class="nav-item">
                     <a href="{% url 'view_schedule' %}" class="nav-link">View Schedule</a>
                 </li>
