--- a/src/main/templates/login.html
+++ b/src/main/templates/login.html
@@ -9,16 +9,16 @@
             <div class="col-md-6">
                 <div class="card">
                     <div class="card-body">
-                        <h2 class="card-title text-center p-1">Login</h2>
+                        <h2 class="card-title text-center">Login</h2>
                         <form id="login-form" method="post">
                             {% csrf_token %}
                             <div class="form-group">
-                                <label for="id_username" class="m-1">Username</label>
+                                <label for="id_username">Username</label>
                                 <input type="text" class="form-control form-control-lg mb-2" id="id_username" name="username" placeholder="JohnDoe">
                             </div>
 
                             <div>
-                                <label for="id_password" class="m-1">Password</label>
+                                <label for="id_password">Password</label>
                                 <input type="password" class="form-control form-control-lg" id="id_password" name="password" placeholder="Enter your password">
                             </div>
 
