--- a/src/main/templates/view_schedule.html
+++ b/src/main/templates/view_schedule.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}MedVoyage | View Schedule{% endblock %}
+{% block title %}View Schedule{% endblock %}
 
 {% block content %}
     <div>
@@ -16,11 +16,11 @@
                     width: 90%;
                     margin: 20px auto;
                 }
-            
+
                 .custom-table th, .custom-table td {
                     padding: 10px;
                 }
-            
+
                 /* Adjust the width of the Details column */
                 .custom-details {
                     width: 65%;
